Update file for arrays property examples

--- a/array_creation.ipynb
+++ b/array_creation.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -66,7 +66,7 @@
         "id": "7Xv7dl5c3awz",
         "outputId": "424868f7-68a4-40ee-b93e-9a6a4277cff2"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -94,7 +94,7 @@
         "id": "lNPtSr2E3sTA",
         "outputId": "6faf42e4-db48-4532-a159-085e49eb0f09"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -124,7 +124,7 @@
         "id": "YSVNwOHL4IL1",
         "outputId": "f1fca776-af8f-4bae-a132-eef4a0dde491"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -152,7 +152,7 @@
         "id": "S4L-WumI4pZZ",
         "outputId": "ca63b243-8b5c-4409-c6f3-0f491eddb86e"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -166,6 +166,111 @@
           "execution_count": 10
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Array Properties**"
+      ],
+      "metadata": {
+        "id": "arjjSU2m6yrQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Find shape, size, ndim, dtype of an array\n",
+        "array = np.array([2,8,9,3,5])\n",
+        "print(\"Shape of an array: \", array.shape)\n",
+        "print(\"Size of an array: \", array.size)\n",
+        "print(\"Dimension of an array: \", array.ndim)\n",
+        "print(\"Data type of an array: \", array.dtype)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0QMJRyLE62cP",
+        "outputId": "80ef5ea0-9baf-453e-97a7-89926cfdabf1"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Shape of an array:  (5,)\n",
+            "Size of an array:  5\n",
+            "Dimension of an array:  1\n",
+            "Data type of an array:  int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Convert an integer array to float type.\n",
+        "\n",
+        "array = array.astype(float)\n",
+        "array"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HvpQWjrE8NpB",
+        "outputId": "870e3ea9-19fe-4798-82f9-f7eb6061213f"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([2., 8., 9., 3., 5.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Check memory size of an array\n",
+        "array.nbytes"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kt9_pLmp8caz",
+        "outputId": "e9f860d0-0f62-441c-e8c4-cfaa0692aab3"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "40"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "HtNqzC-t80qM"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
